--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,5 +50,6 @@
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1",
     "webpack-merge": "^4.2.1"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
