--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-router-dom": "^5.0.0",
+    "react-toastify": "^5.3.2",
     "regenerator-runtime": "^0.13.2"
   },
   "devDependencies": {
